--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,9 @@
     <link rel="icon" type="image/x-icon" href="assets/luminite.ico">
 </head>
 <body>
+    <a href="https://bnet.ie-t.net">By nandeyanen</a>
     <div class="search">
-        <h1>Luminite</h1>
+        <h1>Naminite</h1>
             <form>
                 <input placeholder="Browse the Web Uncensored...">
                 <script src="uv/uv.bundle.js"></script>
@@ -20,13 +21,5 @@
                 <script src="index.js"></script>
         </form>
     </div>
-    <nav class="navbar">
-        <a href=""><button><img src="assets/home.png" width="40" height="40"></button></a>
-        <a href="g"><button><img src="assets/games.png" width="40"></button></a>
-        <a href="a"><button><img src="assets/apps.png" width="40" height="40"></button></a>
-        <a href="s"><button><img src="assets/settings.png" width="40" height="40"></button></a>
-        <a href="https://dsc.gg/teamlunar"><button><img src="assets/discord.png" width="40" height="40"></button></a>
-        <a href="https://github.com/Lunadox-Dev/"><button><img src="assets/github.webp" width="40" height="40"></button></a>
-    </nav>
 </body>
 </html>
